Add ConfigProperties variables from application file

--- a/wf-core-services/src/main/resources/application.properties
+++ b/wf-core-services/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-weather.api.key=376d4b05e3854fde99581920232808
-weather.api.url=https://api.weatherapi.com/v1/current.json?key=%s&q=%s&q=%s
+weather.key=376d4b05e3854fde99581920232808
+weather.api=https://api.weatherapi.com
