--- a/wf-core-services/pom.xml
+++ b/wf-core-services/pom.xml
@@ -15,14 +15,13 @@
     <description>wf-core-services</description>
     <properties>
         <java.version>17</java.version>
-        <jackson-databind.version>2.15.2</jackson-databind.version>
+        <openfeign.version>4.0.4</openfeign.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
@@ -39,9 +38,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson-databind.version}</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>${openfeign.version}</version>
         </dependency>
     </dependencies>
 
