--- a/wf-core-services/src/main/resources/application.properties
+++ b/wf-core-services/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 weather.key=376d4b05e3854fde99581920232808
 weather.api=https://api.weatherapi.com
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+spring.datasource.url=jdbc:mariadb://localhost:3306/weather
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.sql.init.data-locations=classpath:sql/init.sql
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
