--- a/wf-core-services/src/main/resources/application.properties
+++ b/wf-core-services/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 weather.key=376d4b05e3854fde99581920232808
 weather.api=https://api.weatherapi.com
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
-spring.datasource.url=jdbc:mariadb://localhost:3306/weather?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mariadb://0.0.0.0:3306/weather?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.sql.init.data-locations=classpath:sql/init.sql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
