Draft docker files

--- a/wf-core-services/src/main/resources/application.properties
+++ b/wf-core-services/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 weather.key=376d4b05e3854fde99581920232808
 weather.api=https://api.weatherapi.com
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
-spring.datasource.url=jdbc:mariadb://0.0.0.0:3306/weather?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mariadb://localhost:3306/weather?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
