--- a/docker-compose-database.yml
+++ b/docker-compose-database.yml
@@ -7,5 +7,7 @@ services:
     environment:
       MARIADB_ROOT_PASSWORD: "${MARIADB_ROOT_PASSWORD}"
       MARIADB_USER": "${MARIADB_USER}"
+      MARIADB_PASSWORD": "${MARIADB_PASSWORD}"
+      MARIADB_DATABASE : "${MARIADB_DATABASE}"
     ports:
       - "3306:3306"
