--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,6 @@ services:
       - "8080:8080"
     depends_on:
       - db
-    environment:
-      MARIADB_USER: "${MARIADB_USER}"
-      MARIADB_ROOT_PASSWORD: "${MARIADB_ROOT_PASSWORD}"
-      MARIADB_PASSWORD: "${MARIADB_PASSWORD}"
 
   db:
     image: mariadb:latest
@@ -20,5 +16,7 @@ services:
     environment:
       MARIADB_ROOT_PASSWORD: "${MARIADB_ROOT_PASSWORD}"
       MARIADB_USER": "${MARIADB_USER}"
+      MARIADB_PASSWORD": "${MARIADB_PASSWORD}"
+      MARIADB_DATABASE : "${MARIADB_DATABASE}"
     ports:
       - "3306:3306"
