--- a/wf-core-services/src/main/resources/application.properties
+++ b/wf-core-services/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.sql.init.data-locations=classpath:sql/init.sql
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+
+cxf.path=/api
