--- a/wf-core-services/pom.xml
+++ b/wf-core-services/pom.xml
@@ -18,6 +18,7 @@
         <openfeign.version>4.0.4</openfeign.version>
         <apache.cxf.version>4.0.2</apache.cxf.version>
         <mariadb.version>2.0.1</mariadb.version>
+        <jackson-jaxrs.version>1.9.13</jackson-jaxrs.version>
     </properties>
     <dependencies>
         <dependency>
@@ -52,7 +53,7 @@
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-jaxrs</artifactId>
-            <version>1.9.13</version>
+            <version>${jackson-jaxrs.version}</version>
         </dependency>
     </dependencies>
 
