--- a/wf-stats-services/src/main/resources/application.properties
+++ b/wf-stats-services/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-
+# ====================================================== #
+#                       MARIADB                          #
+# ====================================================== #
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+spring.datasource.url=jdbc:mariadb://localhost:3306/weather
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+# ====================================================== #
+#                       SPRING                           #
+# ====================================================== #
+server.port=8081
