--- a/wf-stats-services/pom.xml
+++ b/wf-stats-services/pom.xml
@@ -6,30 +6,25 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.1.3</version>
-        <relativePath/>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
-    <artifactId>wf-core-services</artifactId>
+    <groupId>com.stats</groupId>
+    <artifactId>wf-stats-services</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>wf-core-services</name>
-    <description>wf-core-services</description>
+    <name>wf-stats-services</name>
+    <description>wf-stats-services</description>
     <properties>
         <java.version>17</java.version>
-        <openfeign.version>4.0.4</openfeign.version>
-        <apache.cxf.version>4.0.2</apache.cxf.version>
         <mariadb.version>2.0.1</mariadb.version>
-        <jackson-jaxrs.version>1.9.13</jackson-jaxrs.version>
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-spring-boot-starter-jaxrs</artifactId>
-            <version>${apache.cxf.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.mariadb.jdbc</groupId>
-            <artifactId>mariadb-java-client</artifactId>
-            <version>${mariadb.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -42,18 +37,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>${openfeign.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-jaxrs</artifactId>
-            <version>${jackson-jaxrs.version}</version>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>${mariadb.version}</version>
         </dependency>
     </dependencies>
 
