--- a/wf-stats-ui/package.json
+++ b/wf-stats-ui/package.json
@@ -45,5 +45,11 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:8080"
+  "proxy": "http://localhost:8080",
+  "devDependencies": {
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
+    "svg-inline-loader": "^0.8.2"
+  }
 }
