--- a/wf-stats-ui/package.json
+++ b/wf-stats-ui/package.json
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "webpack serve --mode=development",
+    "build": "./node_modules/.bin/webpack",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -46,9 +47,19 @@
   },
   "proxy": "http://localhost:8080",
   "devDependencies": {
+    "@babel/cli": "^7.22.15",
+    "@babel/core": "^7.22.15",
+    "@babel/preset-react": "^7.22.15",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "style-loader": "^3.3.3",
-    "svg-inline-loader": "^0.8.2"
+    "svg-inline-loader": "^0.8.2",
+    "ts-loader": "^9.4.4",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "browser": {
+    "[module-name]": false
   }
 }
