Updating frontend part.

--- a/docker-compose-database.yml
+++ b/docker-compose-database.yml
@@ -11,3 +11,5 @@ services:
       MARIADB_DATABASE: "${MARIADB_DATABASE}"
     ports:
       - "3306:3306"
+    volumes:
+      - ./sql:/docker-entrypoint-initdb.d
