Delete webpack configuration.

--- a/wf-stats-ui/package.json
+++ b/wf-stats-ui/package.json
@@ -22,8 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "webpack serve --mode=development",
-    "build": "./node_modules/.bin/webpack",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
