--- a/wf-statistic-ui/package.json
+++ b/wf-statistic-ui/package.json
@@ -1,8 +1,10 @@
 {
-	"name": "location-ui",
+	"name": "weather-forecast",
 	"version": "0.0.0",
 	"private": true,
 	"devDependencies": {
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
 		"@types/node": "^15.0.3",
 		"@types/react": "^18.0.20",
 		"@types/react-dom": "^18.0.6",
@@ -13,20 +15,23 @@
 		"typescript": "^4.2.4",
 		"webpack": "^5.67.0",
 		"webpack-cli": "^4.9.2",
-		"webpack-dev-server": "^4.15.1"
+		"webpack-dev-server": "^4.15.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
 	},
 	"scripts": {
-		"start": "webpack serve --open",
+		"start": "webpack serve",
 		"build": "webpack --mode production",
-		"serve": "serve dist -p 3001",
+		"serve": "serve dist -p 3000",
 		"clean": "rm -rf dist"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.7.1",
-		"@emotion/styled": "^11.6.0",
+		"@emotion/react": "^11.11.1",
+		"@emotion/styled": "^11.11.0",
 		"@mui/material": "^5.14.11",
 		"framer-motion": "^5.6.0",
 		"react": "^18.2.0",
+		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^3.1.3",
 		"react-router-dom": "^6.4.2",
