--- a/wf-location-ui/package.json
+++ b/wf-location-ui/package.json
@@ -26,6 +26,7 @@
 		"@emotion/styled": "^11.6.0",
 		"@mui/material": "^5.14.11",
 		"framer-motion": "^5.6.0",
+		"json-loader": "^0.5.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^3.1.3",
