Writing UI tests and refactor code.

--- a/wf-location-ui/tsconfig.json
+++ b/wf-location-ui/tsconfig.json
@@ -17,5 +17,10 @@
     "noEmit": false,
     "jsx": "react-jsx"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": [
+    "node_modules",
+    "public_html",
+    "test"
+  ]
 }
