--- a/wf-statistic-ui/package.json
+++ b/wf-statistic-ui/package.json
@@ -1,38 +1,50 @@
 {
-	"name": "weather-forecast",
-	"version": "0.0.0",
-	"private": true,
-	"devDependencies": {
-		"@emotion/styled": "^11.11.0",
-		"@types/node": "^15.0.3",
-		"@types/react": "^18.0.20",
-		"@types/react-dom": "^18.0.6",
-		"css-loader": "^6.8.1",
-		"html-webpack-plugin": "5.3.1 ",
-		"serve": "11.3.2",
-		"ts-loader": "^9.1.2",
-		"typescript": "^4.2.4",
-		"webpack": "^5.67.0",
-		"webpack-cli": "^4.9.2",
-		"webpack-dev-server": "^4.15.1",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
-	},
-	"scripts": {
-		"start": "webpack serve",
-		"build": "webpack --mode production",
-		"serve": "serve dist -p 3000",
-		"clean": "rm -rf dist"
-	},
-	"dependencies": {
-		"@emotion/styled": "^11.11.0",
-		"@mui/material": "^5.14.11",
-		"framer-motion": "^5.6.0",
-		"react": "^18.2.0",
-		"react-chartjs-2": "^5.2.0",
-		"react-dom": "^18.2.0",
-		"react-error-boundary": "^3.1.3",
-		"react-router-dom": "^6.4.2",
-		"style-loader": "^3.3.3"
-	}
+  "name": "weather-forecast",
+  "version": "0.0.0",
+  "private": true,
+  "devDependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^15.0.3",
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
+    "babel-jest": "^29.7.0",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "5.3.1 ",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "serve": "11.3.2",
+    "ts-jest": "^29.1.1",
+    "ts-loader": "^9.1.2",
+    "typescript": "^4.2.4",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.15.1"
+  },
+  "scripts": {
+    "start": "webpack serve",
+    "build": "webpack --mode production",
+    "serve": "serve dist -p 3000",
+    "clean": "rm -rf dist",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.11",
+    "@types/node-fetch": "^2.6.6",
+    "framer-motion": "^5.6.0",
+    "identity-obj-proxy": "^3.0.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^3.1.3",
+    "react-router-dom": "^6.4.2",
+    "style-loader": "^3.3.3"
+  }
 }
