--- a/wf-location-ui/package.json
+++ b/wf-location-ui/package.json
@@ -29,7 +29,7 @@
 		"build": "webpack --mode production",
 		"serve": "serve dist -p 3001",
 		"clean": "rm -rf dist",
-		"test": "jest"
+		"test": "jest --coverage"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.7.1",
