--- a/wf-statistic-ui/package.json
+++ b/wf-statistic-ui/package.json
@@ -32,7 +32,7 @@
     "build": "webpack --mode production",
     "serve": "serve dist -p 3000",
     "clean": "rm -rf dist",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "dependencies": {
     "@emotion/styled": "^11.11.0",
