--- a/wf-location-ui/package.json
+++ b/wf-location-ui/package.json
@@ -3,12 +3,21 @@
 	"version": "0.0.0",
 	"private": true,
 	"devDependencies": {
+		"@testing-library/dom": "^9.3.3",
+		"@testing-library/jest-dom": "^6.1.3",
+		"@testing-library/react": "^14.0.0",
+		"@testing-library/user-event": "^14.5.1",
+		"@types/jest": "^29.5.5",
 		"@types/node": "^15.0.3",
 		"@types/react": "^18.0.20",
 		"@types/react-dom": "^18.0.6",
+		"babel-jest": "^29.7.0",
 		"css-loader": "^6.8.1",
 		"html-webpack-plugin": "5.3.1 ",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
 		"serve": "11.3.2",
+		"ts-jest": "^29.1.1",
 		"ts-loader": "^9.1.2",
 		"typescript": "^4.2.4",
 		"webpack": "^5.67.0",
@@ -19,13 +28,15 @@
 		"start": "webpack serve --open",
 		"build": "webpack --mode production",
 		"serve": "serve dist -p 3001",
-		"clean": "rm -rf dist"
+		"clean": "rm -rf dist",
+		"test": "jest --coverage"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.7.1",
 		"@emotion/styled": "^11.6.0",
 		"@mui/material": "^5.14.11",
 		"framer-motion": "^5.6.0",
+		"identity-obj-proxy": "^3.0.0",
 		"json-loader": "^0.5.7",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
