--- a/karaf-wf-core-service/weather-fetcher-api/pom.xml
+++ b/karaf-wf-core-service/weather-fetcher-api/pom.xml
@@ -33,6 +33,13 @@
             <version>${jackson.version}</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+
     </dependencies>
 
     <build>
