--- a/karaf-wf-core-service/weather-fetcher-persistence/impl/pom.xml
+++ b/karaf-wf-core-service/weather-fetcher-persistence/impl/pom.xml
@@ -48,6 +48,13 @@
             <version>${jackson.version}</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.codehaus.jackson/jackson-mapper-asl -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.9.13</version>
+        </dependency>
+
     </dependencies>
 
     <build>
