--- a/wf-core-services/pom.xml
+++ b/wf-core-services/pom.xml
@@ -4,9 +4,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.weather.fetcher</groupId>
-        <artifactId>weather-fetcher-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.1.3</version>
+        <relativePath/>
     </parent>
 
     <groupId>com.core.service</groupId>
@@ -18,6 +19,8 @@
         <openfeign.version>4.0.4</openfeign.version>
         <apache.cxf.version>4.0.2</apache.cxf.version>
         <jackson-jaxrs.version>1.9.13</jackson-jaxrs.version>
+        <java.version>17</java.version>
+        <mariadb.version>2.0.1</mariadb.version>
     </properties>
 
     <dependencies>
@@ -50,6 +53,28 @@
             <artifactId>jackson-jaxrs</artifactId>
             <version>${jackson-jaxrs.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>${mariadb.version}</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
