--- a/wf-stats-services/pom.xml
+++ b/wf-stats-services/pom.xml
@@ -4,15 +4,21 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.weather.fetcher</groupId>
-        <artifactId>weather-fetcher-parent</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.1.3</version>
+        <relativePath/>
     </parent>
 
     <groupId>com.stats.service</groupId>
     <artifactId>wf-stats-services</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>wf-stats-services</name>
+
+    <properties>
+        <java.version>17</java.version>
+        <mariadb.version>2.0.1</mariadb.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -33,6 +39,28 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>${mariadb.version}</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
