--- a/karaf-wf-core-service/weather-fetcher-api/pom.xml
+++ b/karaf-wf-core-service/weather-fetcher-api/pom.xml
@@ -33,13 +33,6 @@
             <version>${jackson.version}</version>
             <scope>compile</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.13</version>
-        </dependency>
-
     </dependencies>
 
     <build>
@@ -62,6 +55,14 @@
                             *
                         </Import-Package>
                     </instructions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
         </plugins>
