Minor changes (issue with EntityManager)

--- a/karaf-wf-core-service/weather-fetcher-persistence/impl/pom.xml
+++ b/karaf-wf-core-service/weather-fetcher-persistence/impl/pom.xml
@@ -14,29 +14,19 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>javax.persistence-api</artifactId>
-            <version>${javax.persistence-api.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
             <version>${mariadb.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>${hibernate.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate.javax.persistence</groupId>
-            <artifactId>hibernate-jpa-2.1-api</artifactId>
-            <version>${hibernate.javax.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -58,14 +48,22 @@
                         <Meta-Persistence>META-INF/persistence.xml
                         </Meta-Persistence>
                         <Export-Package>
-                            com.weather.fetcher.weather-fetcher-persistence*;version=${project.version}
+                            com.service.core.persistence*;version=${project.version},
                         </Export-Package>
                         <Import-Package>
-                            org.hibernate.proxy,
-                            javassist.util.proxy,
+<!--                            org.hibernate.proxy,-->
+<!--                            javassist.util.proxy,-->
                             *
                         </Import-Package>
                     </instructions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
