--- a/karaf-rest-service-core/karaf-rest-blueprint/pom.xml
+++ b/karaf-rest-service-core/karaf-rest-blueprint/pom.xml
@@ -5,12 +5,12 @@
 
     <parent>
         <groupId>com.weather.fetcher</groupId>
-        <artifactId>karaf-rest-example</artifactId>
+        <artifactId>karaf-rest-service-core</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>karaf-rest-example-blueprint</artifactId>
-    <name>Apache Karaf :: Examples :: REST :: Blueprint</name>
+    <artifactId>karaf-rest-blueprint</artifactId>
+    <name>Apache Karaf :: REST :: Blueprint</name>
     <packaging>bundle</packaging>
 
     <dependencies>
@@ -21,7 +21,7 @@
         </dependency>
         <dependency>
             <groupId>com.weather.fetcher</groupId>
-            <artifactId>karaf-rest-example-api</artifactId>
+            <artifactId>karaf-rest-api</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
@@ -38,6 +38,14 @@
                             *
                         </Import-Package>
                     </instructions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
         </plugins>
