--- a/karaf-rest-service-core/pom.xml
+++ b/karaf-rest-service-core/pom.xml
@@ -9,14 +9,14 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>karaf-rest-example</artifactId>
+    <artifactId>karaf-rest-service-core</artifactId>
     <name>Apache Karaf :: Examples :: REST</name>
     <packaging>pom</packaging>
 
     <modules>
-        <module>karaf-rest-example-api</module>
-        <module>karaf-rest-example-blueprint</module>
-        <module>karaf-rest-example-features</module>
+        <module>karaf-rest-api</module>
+        <module>karaf-rest-blueprint</module>
+        <module>karaf-rest-features</module>
     </modules>
 
     <properties>
