--- a/karaf-rest-service-core/karaf-rest-blueprint/pom.xml
+++ b/karaf-rest-service-core/karaf-rest-blueprint/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
 
@@ -33,7 +34,10 @@
                 <artifactId>maven-bundle-plugin</artifactId>
                 <configuration>
                     <instructions>
-                        <Export-Package>org.apache.karaf.examples.rest.blueprint</Export-Package>
+                        <Export-Package>
+                            com.weather.fetcher.blueprint.response,
+                            com.weather.fetcher.blueprint.service
+                        </Export-Package>
                         <Import-Package>
                             *
                         </Import-Package>
