--- a/karaf-rest-service-core/karaf-rest-blueprint/pom.xml
+++ b/karaf-rest-service-core/karaf-rest-blueprint/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
-            <version>2.1</version>
+            <version>${javax.ws.version}</version>
         </dependency>
         <dependency>
             <groupId>com.weather.fetcher</groupId>
