Add karaf-rest-persistence module (not working)

--- a/karaf-rest-service-core/karaf-rest-blueprint/pom.xml
+++ b/karaf-rest-service-core/karaf-rest-blueprint/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>karaf-rest-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.weather.fetcher</groupId>
+            <artifactId>karaf-rest-persistence</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
