--- a/karaf-rest-service-core/pom.xml
+++ b/karaf-rest-service-core/pom.xml
@@ -18,6 +18,7 @@
         <module>karaf-rest-api</module>
         <module>karaf-rest-blueprint</module>
         <module>karaf-rest-features</module>
+        <module>karaf-rest-persistence</module>
     </modules>
 
     <properties>
@@ -26,6 +27,8 @@
         <cxf.version>3.5.5</cxf.version>
         <lombok.version>1.18.32</lombok.version>
         <javax.ws.version>2.1</javax.ws.version>
+        <javax.persistence.version>2.1.0</javax.persistence.version>
+        <mariadb.version>3.3.3</mariadb.version>
     </properties>
 
     <dependencies>
