Add entity layer with commented persistence dependencies

--- a/karaf-rest-service-core/karaf-rest-api/pom.xml
+++ b/karaf-rest-service-core/karaf-rest-api/pom.xml
@@ -30,6 +30,7 @@
                 <configuration>
                     <instructions>
                         <Export-Package>
+                            com.weather.fetcher.api.entity,
                             com.weather.fetcher.api.enums,
                             com.weather.fetcher.api.model,
                             com.weather.fetcher.api.service
