--- a/karaf-rest-service-core/karaf-rest-api/pom.xml
+++ b/karaf-rest-service-core/karaf-rest-api/pom.xml
@@ -33,7 +33,7 @@
                             com.weather.fetcher.api.entity,
                             com.weather.fetcher.api.enums,
                             com.weather.fetcher.api.model,
-                            com.weather.fetcher.api.service
+                            com.weather.fetcher.api.service,
                         </Export-Package>
                         <Import-Package>
                             javax.persistence;version="[2,3)",
