--- a/karaf-rest-service-core/pom.xml
+++ b/karaf-rest-service-core/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>karaf-rest-service-core</artifactId>
-    <name>Apache Karaf :: Service Core :: REST</name>
+    <name>Apache Karaf :: REST :: Service Core</name>
     <packaging>pom</packaging>
 
     <modules>
@@ -29,6 +29,7 @@
         <javax.ws.version>2.1</javax.ws.version>
         <javax.persistence.version>2.1.0</javax.persistence.version>
         <mariadb.version>3.3.3</mariadb.version>
+        <javax.transaction-api.version>1.2</javax.transaction-api.version>
     </properties>
 
     <dependencies>
