--- a/karaf-rest-service-core/pom.xml
+++ b/karaf-rest-service-core/pom.xml
@@ -16,9 +16,10 @@
 
     <modules>
         <module>karaf-rest-api</module>
-        <module>karaf-rest-blueprint</module>
         <module>karaf-rest-features</module>
         <module>karaf-rest-persistence</module>
+        <module>karaf-rest-persistence/weather-fetcher-datasource</module>
+        <module>karaf-rest-persistence/weather-fetcher-repository</module>
     </modules>
 
     <properties>
@@ -30,6 +31,16 @@
         <javax.persistence.version>2.1.0</javax.persistence.version>
         <mariadb.version>3.3.3</mariadb.version>
         <javax.transaction-api.version>1.2</javax.transaction-api.version>
+
+        <maven-bundle-plugin.version>4.2.0</maven-bundle-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <build.helper.maven.plugin.version>1.10</build.helper.maven.plugin.version>
+
+        <osgi.version>5.0.0</osgi.version>
+        <hibernate.version>5.5.9.Final</hibernate.version>
+        <mariadb-java-client.version>3.0.8</mariadb-java-client.version>
+        <hibernate-jpa-2.1-api.version>1.0.2.Final</hibernate-jpa-2.1-api.version>
+        <cxf.version>3.5.3</cxf.version>
     </properties>
 
     <dependencies>
