--- a/karaf-rest-service-core/karaf-rest-persistence/weather-fetcher-repository/pom.xml
+++ b/karaf-rest-service-core/karaf-rest-persistence/weather-fetcher-repository/pom.xml
@@ -1,24 +1,26 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.weather.fetcher</groupId>
         <artifactId>karaf-rest-service-core</artifactId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>karaf-rest-api</artifactId>
-    <name>Apache Karaf :: REST :: API</name>
+    <artifactId>weather-fetcher-repository</artifactId>
     <packaging>bundle</packaging>
 
     <dependencies>
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-            <version>${javax.ws.version}</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.5.9.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate.javax.persistence</groupId>
+            <artifactId>hibernate-jpa-2.1-api</artifactId>
+            <version>1.0.2.Final</version>
         </dependency>
     </dependencies>
 
@@ -27,26 +29,19 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-<!--                <version>4.2.0</version>-->
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <Export-Package>com.weather.fetcher.api.*</Export-Package>
+                        <Meta-Persistence>META-INF/persistence.xml</Meta-Persistence>
+                        <Export-Package>org.weather.fetcher.repo.*</Export-Package>
                         <Import-Package>
+                            org.hibernate.proxy,
+                            javassist.util.proxy,
                             *
                         </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>11</source>
-                    <target>11</target>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
-
 </project>
