--- a/karaf-rest-service-core/karaf-rest-persistence/pom.xml
+++ b/karaf-rest-service-core/karaf-rest-persistence/pom.xml
@@ -9,13 +9,19 @@
     </parent>
 
     <artifactId>karaf-rest-persistence</artifactId>
+    <name>Apache Karaf :: REST :: Persistence</name>
     <packaging>pom</packaging>
+
+    <modules>
+        <module>weather-fetcher-datasource</module>
+        <module>weather-fetcher-repository</module>
+    </modules>
 
     <dependencies>
         <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
-            <version>${mariadb.version}</version>
+            <version>${mariadb-java-client.version}</version>
         </dependency>
     </dependencies>
 
@@ -24,9 +30,10 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>${felix.maven-bundle-plugin.version}</version>
+                <version>${maven-bundle-plugin.version}</version>
                 <extensions>true</extensions>
             </plugin>
         </plugins>
     </build>
+
 </project>
