Working version without repository layer in bundle

--- a/karaf-rest-service-core/org.apache.karaf.features.cfg
+++ b/karaf-rest-service-core/org.apache.karaf.features.cfg
@@ -50,7 +50,7 @@ featuresBoot = \
     bundle/4.3.9, \
     config/4.3.9, \
     kar/4.3.9, \
-	karaf-rest-blueprint
+	weather-fetcher-features
 
 #
 # Resource repositories (OBR) that the features resolver can use
