--- a/wf-core-services/pom.xml
+++ b/wf-core-services/pom.xml
@@ -13,14 +13,14 @@
     <groupId>com.core.service</groupId>
     <artifactId>wf-core-services</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>wf-core-services</name>
+    <name>Weather fetcher :: Core :: Services</name>
 
     <properties>
         <openfeign.version>4.0.4</openfeign.version>
         <apache.cxf.version>4.0.2</apache.cxf.version>
         <jackson-jaxrs.version>1.9.13</jackson-jaxrs.version>
-        <java.version>17</java.version>
-        <mariadb.version>2.0.1</mariadb.version>
+        <java.version>11</java.version>
+        <mariadb.version>3.4.0</mariadb.version>
     </properties>
 
     <dependencies>
