--- a/wf-stats-services/pom.xml
+++ b/wf-stats-services/pom.xml
@@ -13,7 +13,7 @@
     <groupId>com.stats.service</groupId>
     <artifactId>wf-stats-services</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>wf-stats-services</name>
+    <name>Weather fetcher :: Core :: Statistic</name>
 
     <properties>
         <java.version>17</java.version>
